--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,400;1,500&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+    body {
+        @apply font-body text-[#232428]
+    }
+}
+
+@layer components {
+    .headerLink {
+        @apply cursor-pointer opacity-75 transition hover:opacity-100
+    }
+    .headerIcon {
+        @apply h-6 w-6 cursor-pointer opacity-75 transition hover:opacity-100
+    }
+}
